# CBU-IEEE-SEC-HW-2024

./: .gitignore  .gitmodules  CMakeLists.txt  Line Follower  Motor Driver encoder  README.md  cvat_download_data.py  export_data.sh  requirements.txt  requirements_jetson_extras.txt  setup.py  setup_jetson.py  setup_train.py
Arduino/: CMakeLists.txt  Encoder Plus UltraSonic  Encoder V2.2 Arduino MD  PID starter code  arduino_requirements.txt
Arduino/Arm/: Arm.ino
Arduino/EncoderV2/: Encoder.cpp  Encoder.h  PID.cpp  PID.h  encoder_v2.ino
Arduino/EncoderV3/: EncoderV3.ino
Arduino/LCD_Screen/: LCD_Screen.ino
Arduino/LineFollower/: LineFollower.ino
Arduino/Main/: Main.ino  calcs.txt
Arduino/PID/: PID code
Arduino/Phototransistor/: Phototransistor.ino
Arduino/SPISlave/: SPISlave.ino
Arduino/fullMovement/: Encoder_Motor.cpp  Encoder_Motor.h  fullMovement
Arduino/fullMovement copy/: fullMovement copy.ino
Arduino/fullMovement copy 2/: fullMovement copy 2.ino
Arduino/main/: main.ino
Arduino/servo move/: servo move.ino
Field Timer/: main.py
Python/: actuators.py  blockdiagram.drawio  fps_test.py  gpio.py  main.py  main_modeless.py  manual_arm_controls.py  mirror.py  ml.py  model_test.py  model_train.py  modeltest.py  sensors.py  timer.py  train.py
Python/Testing/: view_images.py
Python/data_preprocessing/: compress_data.py  cvat_download_data.py  decompress_data.py  download_data.py  generate_images.py  (+3 more)
Timer/: CMakeLists.txt
cmake/: SuperBuild.cmake
docs/: EnablingSPI.md  PsudoCode.txt
include/: Main.hpp
shell_scripts/: export_data.sh  generate_annotations.sh  git_commit_jacob.sh  git_jacob.sh  git_push_jacob.sh  increase_swap.sh  remove_audio.sh  split_videos.sh  strip.sh
src/: Main.cpp
(+92 files in other folders)
